fix 5.38 compatibility for wayland case

FIXED-IN:0.9.11
BUG:419657